[FIX] web: Technical tooltip line-height too large, reducing
The technical info on the field have a too large popup.
Some fields have so many options that the popup covers the field
and start flashing, appearing and disappearing.
For the moment we are reducing the `line-height` a bit, which
actually looks better, then we'll see how to handle this functionally
and structurally.

closes odoo/odoo#226065

--- a/addons/web/static/src/core/tooltip/tooltip.scss
+++ b/addons/web/static/src/core/tooltip/tooltip.scss
@@ -40,6 +40,7 @@
 
     .o-tooltip--technical {
         padding-left: 1.3em;
+        line-height: $o-line-height-sm;
         font-family: $o-font-family-monospace;
         font-size: $o-font-size-base-smaller;
         list-style-type: disc;
